src/test/deca/syntax/valid/synt/class_declarations_with_extends.deca
/*
    Description: Test sur la déclaration de plusieurs classes

    Résultat : OK
*/
class A extends B{
}
class B extends C{
}
class C{
}
{
}
