src/test/deca/syntax/invalid/synt/extends_multiple_class.deca
/*
    Description : extension de plusieurs classes

    Résultat : erreur syntaxique
*/
class A{}
class B{}
class C extends A,B{}
